--- a/templates/example.html
+++ b/templates/example.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Яна Кудеярова. Лабораторная работа {{number}}</title>
+    <title>{% if name %}
+            {{name}}.
+        {% else %}
+            Анонимус.
+        {% endif %}
+        {% if lab_num %}
+            Лабораторная работа 2 
+        {% endif %} 
+    </title>
     <link rel="stylesheet" href="{{url_for ('static', filename ='main.css')}}">
 </head>
 <body>
     <header>
-        Web-программирование, часть 2. Лабораторная работа {{number}}
+        Web-программирование, часть 2. {% if lab_num %}Лабораторная работа 2{% endif %}
     </header>
 
     <main>
@@ -20,7 +28,23 @@
     </main>
 
     <footer>
-        &copy; {{name}}, ФБИ-31, 3 курс, 2025
+        &copy; 
+        {% if name %}
+            {{name}},
+        {% else %}
+            Анонимус,
+        {% endif %}
+        {% if group %}
+            {{group}},
+        {% else %},
+            Отчисленыш,
+        {% endif %}
+        {% if course %}
+            {{course}},
+        {% else %},
+            Какой-то курс,
+        {% endif %}
+        2025
     </footer>
 </body>
 </html>
