--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -3,7 +3,7 @@
 {# номер лабораторной работы: #}
 {% block lab %}Лабораторная работа 2{% endblock %}
 
-{#основной контент: №}
+{#основной контент: #}
 {% block main %}
     <h1>Шаблоны</h1>
     <div>Тема лабораторной - шаблоны. Список сделанных страниц:</div>
@@ -12,3 +12,4 @@
             <a href = "/lab2/example">example</a>
         </li>
     </ol>
+{% endblock}
