--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -11,5 +11,32 @@
         <li>
             <a href = "/lab2/example">example</a>
         </li>
+        <li>
+            <a href="/lab2/filters">filters</a>
+        </li>
+        <li>
+            <a href="/lab2/flowers/0">Цветок #0</a>
+        </li>
+        <li>
+            <a href="/lab2/all_flowers">Все цветы</a>
+        </li>
+        <li>
+            <a href="/lab2/add_flower/орхидея">Добавить цветок</a>
+        </li>
+        <li>
+            <a href="/lab2/clear_flowers">Очистить цветы</a>
+        </li>
+        <li>
+            <a href="/lab2/calc/5/3">Калькулятор 5 и 3</a>
+        </li>
+        <li>
+            <a href="/lab2/calc/">Калькулятор по умолчанию</a>
+        </li>
+        <li>
+            <a href="/lab2/books">Книги</a>
+        </li>
+        <li>
+            <a href="/lab2/cats">Кошки</a>
+        </li>
     </ol>
 {% endblock %}
