--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Яна Кудеярова. {% block lab %}{% endblock %}</title>
+    <link rel="stylesheet" href="../main.css">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon-16x16.png') }}">
     <link rel="stylesheet" href="{{url_for ('static', filename ='main.css')}}"">
 </head>
 <body>
