--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -15,16 +15,7 @@
             <a href="/lab2/filters">filters</a>
         </li>
         <li>
-            <a href="/lab2/flowers/0">Цветок #0</a>
-        </li>
-        <li>
-            <a href="/lab2/all_flowers">Все цветы</a>
-        </li>
-        <li>
-            <a href="/lab2/add_flower/орхидея">Добавить цветок</a>
-        </li>
-        <li>
-            <a href="/lab2/clear_flowers">Очистить цветы</a>
+            <a href="/lab2/all_flowers">Цветы</a>
         </li>
         <li>
             <a href="/lab2/calc/5/3">Калькулятор 5 и 3</a>
