--- a/static/main.css
+++ b/static/main.css
@@ -63,3 +63,11 @@ footer{
     text-align: center;
     font-weight: bold;
 }
+
+.error {
+    color: #dc2626;
+    font-size: 14px;
+    margin-top: 4px;
+    display: block;
+    font-weight: 500;
+}
