--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,21 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon-32x32.png') }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon-16x16.png') }}">
     <link rel="stylesheet" href="{{url_for ('static', filename ='main.css')}}"">
+    <style>
+        body {
+            {% if request.cookies.get('color') %}
+            color: {{ request.cookies.get('color') }};
+            {% endif %}
+            
+            {% if request.cookies.get('bg_color') %}
+            background-color: {{ request.cookies.get('bg_color') }};
+            {% endif %}
+            
+            {% if request.cookies.get('font_size') %}
+            font-size: {{ request.cookies.get('font_size') }};
+            {% endif %}
+        }
+    </style>
 </head>
 <body>
     <header>
