--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -23,5 +23,8 @@
         <li>
             <a href = "/lab3/order">Заказ напитка</a>
         </li>
+        <li>
+            <a href = "/lab3/settings">Настройки</a>
+        </li>
     </ol>
 {% endblock %}
