--- a/templates/lab3/form1.html
+++ b/templates/lab3/form1.html
@@ -40,7 +40,7 @@
             </select>
         </div>
         <div>
-            <button type="submit">Отправитель</button>
+            <button type="submit">Отправить</button>
         </div>
     </form>
     
