--- a/templates/lab3/settings.html
+++ b/templates/lab3/settings.html
@@ -28,6 +28,7 @@
 
         <div>
             <button type="submit" class="btn-primary">Применить</button>
+            <a href="/lab3/clear_settings" class="btn-secondary" onclick="return confirm('Вы уверены, что хотите сбросить все настройки?')">Сбросить настройки</a>
             <a href="/lab3/" class="btn-secondary">Назад</a>
         </div>
     </form>
