--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -28,6 +28,9 @@
             <a href = "/lab3/ticket">Железнодорожный билет</a>
         </li>
         <li>
+            <a href = "/lab3/products">Поиск товаров</a>  
+        </li>
+        <li>
             <a href = "/lab3/settings">Настройки</a>
         </li>
     </ol>
