--- a/templates/lab4/tree.html
+++ b/templates/lab4/tree.html
@@ -11,4 +11,7 @@
         <button name="operation" value="plant" {% if tree_count >=10 %}disabled{% endif %}</button>>Посадить дерево</button>
         <button name="operation" value="cut" {% if tree_count <=0 %}disabled{% endif %}>Срубить дерево</button>
     </form>
+    <div>
+        <a href ="/lab4">Вернуться к лабораторной работе 4</a>
+    </div>
 {% endblock %}
