--- a/templates/lab4/login.html
+++ b/templates/lab4/login.html
@@ -24,4 +24,7 @@
             </div>
         </form>
     {% endif %}
+    <div>
+        <a href = "/lab4">Вернуться назад</a>
+    </div>
 {% endblock %}
