--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -14,6 +14,7 @@
         <li><a href="/lab4/tree">Счетчик деревьев</a></li>
         <li><a href="/lab4/login">Авторизация</a></li>
         <li><a href="/lab4/fridge-form">Холодильник</a></li>
+        <li><a href="/lab4/grain-form">Заказ зерна</a></li>
     </ol>
 
 {% endblock %}
