--- a/templates/lab4/login.html
+++ b/templates/lab4/login.html
@@ -30,6 +30,9 @@
             <div>
                 <button type="submit">Войти</button>
                 <button type="reset">Отмена</button>
+                <div>
+                    <p>Нет аккаунта? <a href="/lab4/register">Зарегистрируйтесь</a></p>
+                </div>
             </div>
         </form>
     {% endif %}
