--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -15,6 +15,8 @@
         <li><a href="/lab4/login">Авторизация</a></li>
         <li><a href="/lab4/fridge-form">Холодильник</a></li>
         <li><a href="/lab4/grain-form">Заказ зерна</a></li>
+        <li><a href="/lab4/register">Регистрация</a></li>
+        <li><a href="/lab4/users">Список пользователей</a></li>
     </ol>
 
 {% endblock %}
