--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -29,13 +29,13 @@
         </div>
         
         <div class="nav-card">
-            <a href="/lab5/list" class="nav-link">
+            <a href="/lab5/articles" class="nav-link">
                 <h3>Список статей</h3>
             </a>
         </div>
         
         <div class="nav-card">
-            <a href="/lab5/create" class="nav-link">
+            <a href="/lab5/create_article" class="nav-link">
                 <h3>Создать статью</h3>
             </a>
         </div>
