--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -11,6 +11,11 @@
                 Anonymous
             {% endif %}
         </span></h2>
+        <div style="text-align: right; margin-top: 10px;">
+            {% if login %}
+                <a href="/lab5/logout" style="color: #e91e63; text-decoration: none;">Выйти</a>
+            {% endif %}
+        </div>
     </div>
 
     <h1>База знаний</h1>
