--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -44,6 +44,24 @@
                 <h3>Создать статью</h3>
             </a>
         </div>
+
+        <div class="nav-card">
+            <a href="/lab5/users" class="nav-link">
+                <h3>Все пользователи</h3>
+            </a>
+        </div>
+
+        <div class="nav-card">
+            <a href="/lab5/public" class="nav-link">
+                <h3>Публичные статьи</h3>
+            </a>
+        </div>
+
+        <div class="nav-card">
+            <a href="/lab5/profile" class="nav-link">
+                <h3>Мой профиль</h3>
+            </a>
+        </div>
     </div>
 
     <style>
