--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
             {% endif %}
         }
     </style>
+    {% block style %}{% endblock %}
     {% block script %}{% endblock %}
 </head>
 <body>
