--- a/templates/lab7/index.html
+++ b/templates/lab7/index.html
@@ -71,6 +71,9 @@
         color: #666;
         font-size: 12px;
     }
+    .error-message{
+        color: red;
+    }
 </style>
 {% endblock %}
 
@@ -114,6 +117,7 @@
         <label>
             Описание:
             <textarea id="description"></textarea>
+            <div id="description-error" class="error-message"></div>
         </label><br>
 
         <button onclick="sendFilm()">ОК</button>
